--- a/sign-in/cadastro.html
+++ b/sign-in/cadastro.html
@@ -24,14 +24,16 @@
       <link href="signin.css" rel="stylesheet">
 </head>
 <body>
-    <form class="form-signin" onsubmit="salvar()">
+    <form class="form-signin" onsubmit="salvar() , redirect()">
         <h1 class="h3 mb-3 font-weight-normal">Digite email e senha</h1>
         <label for="cadastroEmail" class="sr-only">Email</label>
         <input type="email" id="cadastroEmail" class="form-control" placeholder="Email" required autofocus>
         <label for="cadastroSenha" class="sr-only">Senha</label>
         <input type="password" id="cadastroSenha" class="form-control" placeholder="Senha" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Cadastrar</button>
+        <a class="btn btn-lg btn-primary btn-block" href="index.html">Voltar</a>
       </form>
+      
 </body>
 <script src="../assets/dist/js/cadastro.js"></script>
 </html>
