--- a/sign-in/cadastro.html
+++ b/sign-in/cadastro.html
@@ -24,7 +24,7 @@
       <link href="signin.css" rel="stylesheet">
 </head>
 <body>
-    <form class="form-signin" onsubmit="salvar() , redirect()">
+    <form class="form-signin" onsubmit="salvar()">
         <h1 class="h3 mb-3 font-weight-normal">Digite email e senha</h1>
         <label for="cadastroEmail" class="sr-only">Email</label>
         <input type="email" id="cadastroEmail" class="form-control" placeholder="Email" required autofocus>
